--- a/photo-gallery/src/app/tab2/tab2.page.html
+++ b/photo-gallery/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Galeria
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -10,7 +10,7 @@
 
   <ion-grid>
     <ion-row>
-    <ion-col size="3" 
+    <ion-col size="6" 
       *ngFor="let photo of photoService.photos; index as position">
         <ion-img [src]="photo.webviewPath"></ion-img>
     </ion-col>
